Mon Jul 17 23:49:58 2000  George Lebl <jirka@5z.com>

	* gnome-less.[ch]:  Port to the new text widget.  deprecate the font
	  functions and replace them with new ones which are 1) saner 2)
	  compatible with the new text widget.  Add a way to set width to
	  a specified amount of columns.  Derive the widget from HBox rather
	  then VBox to kill one level of wigetry.  Add append versions of all
	  the show functions.  Make the text widget pointers public.

2000-07-16  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-appbar.[ch] (gnome_appbar_get_status): new accessor function.
	* gnome-app-util.c (gnome_app_activate_statusbar): use
	gnome_appbar_get_status().
	
Fri Jul 14 17:10:54 2000  George Lebl <jirka@5z.com>

	* *.c: fixup the destroy/finalize handlers.  Make sure destroy
	  handlers can be called multiple times and move freeing of
	  private structure to finalize.  Also all unref stuff is supposed
	  to be in the destroy handler and not finalize according to gtk
	  docs.

	* gnome-icon-list.c: Make the typedefs standard and make the
	  private structure standard.

Fri Jul 14 05:39:40 2000  George Lebl <jirka@5z.com>

	* gnome-messagebox.c: handle a case where no buttons were added.
	  This makes gnome_segv work again, woohoo!

Fri Jul 14 05:33:16 2000  George Lebl <jirka@5z.com>

	* gnome-about.c, gnome-animator.c, gnome-animator.h, gnome-app.c,
	  gnome-appbar.c, gnome-calculator.c, gnome-client.c,
	  gnome-color-picker.c, gnome-dateedit.c, gnome-dentry-edit.c,
	  gnome-dialog.c, gnome-ditem-edit.c, gnome-dock-band.c,
	  gnome-dock-item.c, gnome-dock-layout.c, gnome-dock.c,
	  gnome-druid-page-edge.c, gnome-druid-page-finish.c,
	  gnome-druid-page-standard.c, gnome-druid-page-start.c,
	  gnome-druid-page.c, gnome-druid.c, gnome-entry.c:
	  Move freeing of private structure into finalize, and make sure
	  the default destroy handler can be called multiple times as
	  gtk2.0 will do this to us.
Fri Jul 14 04:14:50 2000  George Lebl <jirka@5z.com>
