@@ -1,3 +1,8 @@
+Tue Jul 18 00:46:14 2000  George Lebl <jirka@5z.com>
+
+	* gnome-gconf.c:  don't ref/sink, and use gconf_client_get_default
+	  instead of _new
+
 Mon Jul 17 23:49:58 2000  George Lebl <jirka@5z.com>
 
 	* gnome-less.[ch]:  Port to the new text widget.  deprecate the font
